# RaylibGame

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.88C4B49596A7E9A6.idx
.github/workflows/: cmake-multi-platform.yml
build-web/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  game.html
data/: cube.png.h
src/: main.c  main.cpp  minshell.html
src/engine/: component.h  entity.cpp  entity.h  entity.ipp  world.h
